页面设置优化

--- a/pdf-template-print/template-print.html
+++ b/pdf-template-print/template-print.html
@@ -13,6 +13,12 @@
         #pagebreak {
             display: none
         }
+        #pageheadimg {
+            display: none
+        }
+        #pagefooterimg {
+            display: none
+        }
     </style>
     <style type="text/css">
         body {
